# LocalTerminal

./: README.md  index.html  package-lock.json  package.json  quake.html  vite.config.ts
.github/workflows/: release.yml
src/: App.css  App.tsx  quake.css  quake.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  profiles.rs  quake.rs  shells.rs  terminal.rs  tray.rs
src/components/: ProfilesModal.tsx  SettingsModal.tsx  TermInstance.tsx
src/lib/: backend.ts  i18n.ts  profiles.ts  schemes.ts  util.ts
src/lib/__tests__/: profiles.test.ts  util.test.ts
src/state/: ui.ts
