[package]
name = "localterminal"
version = "0.6.0"
description = "LocalTerminal — terminal 100% offline da suíte Local"
authors = ["Taylor"]
edition = "2021"
license = "MIT"
repository = "https://github.com/Anon5T4R/LocalTerminal"

[lib]
# O sufixo `_lib` evita conflito entre o nome da lib e o do binário no Windows
# (https://github.com/rust-lang/cargo/issues/8519).
name = "localterminal_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# tray-icon: a bandeja é o que permite o app viver em segundo plano com o
# atalho do quake registrado — sem ela o recurso principal da v0.5.0 dependia
# de o usuário deixar a janela aberta.
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Motor de PTY (porte do LocalCode, sem tokio — std sync basta aqui).
# ConPTY no Windows, openpty no Unix.
portable-pty = "0.8"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
# Quake mode: atalho global mostra/esconde a janela que desce do topo.
tauri-plugin-global-shortcut = "2"
# Abrir com o sistema (opt-in), direto na bandeja: é o que faz o quake mode
# responder sem o usuário ter aberto o app antes.
tauri-plugin-autostart = "2"

[target.'cfg(windows)'.dependencies]
# Lê a chave Run na mão pra decidir se o autostart precisa ser reimposto: o
# `is_enabled()` do plugin só checa se a entrada EXISTE, sem comparar o caminho
# (não enxerga entrada obsoleta), e não distingue "apagada" de "desligada pelo
# Gerenciador de Tarefas" — que pedem respostas opostas.
# Mesma versão que o `auto-launch` já usa: não entra crate nova na árvore.
winreg = "0.55"
